--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
 <style>
-html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit-filter: grayscale(100%); }
+html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit-filter: grayscale(0%); }
 </style>
 </head>
 
@@ -82,7 +82,7 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
     <div class="container">
       <div class="splash">
         <div class="content">
-          <center><img src="https://sf1-cdn-tos.bdxiguastatic.com/obj/pgc-image/1251/1251_1296df7e2e4be63265d455f6cd790c8f.png" tppabs="" alt="PatternFly logo" id="qq" class="wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"></center>
+           <center><img src="https://sf1-cdn-tos.bdxiguastatic.com/obj/pgc-image/1251/1251_1296df7e2e4be63265d455f6cd790c8f.png" tppabs="" alt="暂时无法显示，正在修复" id="qq" class="wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"></center>
 
 
 
