--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
 
 
  <p>✨✨✨✨✨侧 边 栏✨✨✨✨✨ </p>
- copyright © LEO code 2022 beta v0.0.2.0
+ copyright © LEO code 2023 beta v1.0.2.0
 
  
 
  <script>
-      alert("欢迎！本页面处于开发阶段！ver:beta v0.0.2.0");
+      alert("欢迎！本网站正在开发！感谢您的访问！");
     </script> 
 
  </body><html><div>
