--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
  <center><font size="5"><a href="https://afdian.net/@LEO_code/plan" target="_blank">赞助我</a></font> </center>
 
 
- <center><font size="5"><a href="./about" target="_blank">关于</a></font> </center>
+ <center><font size="5"><a href="./LEO_code_about" target="_blank">关于</a></font> </center>
 
 
 
@@ -250,7 +250,7 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
 
 
  alert("此网站手机禁止访问！");
- window.location.href="404";
+ window.location.href="404.html";
  }else{
 
 
@@ -261,9 +261,7 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
 
  </script>
 
-<iframe width="330" height="110" src="https://music.163.com/outchain/player?type=2&id=5281551&auto=1&height=66" frameborder="0">
-
-
+  <!--[//<iframe width="330" height="110" src="https://music.163.com/outchain/player?type=2&id=5281551&auto=1&height=66" frameborder="0">
   <!--[//<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=0&id=891340515&auto=1&height=90"></iframe>
    <!--[<iframe width="330" height="110" src="https://music.163.com/outchain/player?type=2&id=39224651&auto=1&height=66" frameborder="0">
  <!--[<iframe width="330" height="110" src="https://music.163.com/outchain/player?type=2&id=5281551&auto=1&height=66" frameborder="0"><iframe width="330" height="110" src="https://music.163.com/outchain/player?type=2&id=5281551&auto=1&height=66" frameborder="0">
@@ -290,9 +288,8 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
                 
 
 
- <p>本人唯一站点！！！</p>
- <p>本人唯一站点！！！</p>
- <p>本人唯一站点！！！</p>
+ <p>此站是本人唯一站点</p>
+ <p>原热铁盒站点已经废弃</p>
 
 <img src="https://tool.lu/netcard/">
 
