--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="utf-8">
-	<title>未找到页面 - 映易铭的网站</title>
+	<title>未找到页面 - LEO的网站</title>
 	<link rel="stylesheet" href="https://www.retiehe.com/css/template.css">
 </head>
 <body>
 	<div class="bg-img"></div>
-	<header>未找到页面 - 映易铭的网站</header>
+	<header>未找到页面 - LEO的网站</header>
 	<main>	
 <div class="text" style=" text-align:center;"><h1>未找到页面</a></h1>
 <p>无法在服务器内找到该URL</p>
