--- a/index.html
+++ b/index.html
@@ -260,6 +260,28 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
  }catch(e){}
 
  </script>
+	 
+	 </script>
+
+
+<script type="text/javascript">
+
+ try{
+
+ if (/MSIE|Trident/i.test(navigator.userAgent)) {
+
+
+ 
+ window.location.href="iestop";
+ }else{
+
+
+
+ }
+
+ }catch(e){}
+
+ </script>
 
   <!--[//<iframe width="330" height="110" src="https://music.163.com/outchain/player?type=2&id=5281551&auto=1&height=66" frameborder="0">
   <!--[//<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=0&id=891340515&auto=1&height=90"></iframe>
