--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
     <div class="container">
       <div class="splash">
         <div class="content">
-           <center><img src="https://sf1-cdn-tos.bdxiguastatic.com/obj/pgc-image/1251/1251_1296df7e2e4be63265d455f6cd790c8f.png" tppabs="" alt="暂时无法显示，正在修复" id="qq" class="wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"></center>
+           <center><img src="1145141919810.png" tppabs="" alt="暂时无法显示，正在修复" id="qq" class="wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"></center>
 
 
 
@@ -304,7 +304,7 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
  runtime_span.innerHTML="本站已经坚强运营了: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();</script>
 
                             <h6 class="contact-title">版权声明 </h6>
-                          <p>本站仅供交流学习，此站版权归LEO/LEO code所有。<br>本站点的开设、关闭和内容设置以LEO本人意愿为准。</p>
+                          <p>本站点的开设、关闭和内容设置以LEO本人意愿为准。</p>
                         </div>
                     
                 
