--- a/stop.html
+++ b/stop.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -10,11 +9,12 @@
 	<div class="bg-img"></div>
 	<header>LEO的网站</header>
 	<main>
+		<h1>Hello, World!</h1>
 		<p>网站改造升级中，敬请期待！</p>
 
 
      <!-- 请注意，以下的示例包含超链接，您可能需要手动配置样式使其不变色。如果您嫌麻烦，可以移除。 -->
-             <p id="hitokoto"><a href="#" id="hitokoto_text">:D 获取一言中... by hitokoto</a></p>
+             <p id="hitokoto"><a href="#" id="hitokoto_text">:D 获取一言中......</a></p>
              <!-- 以下写法，选取一种即可 -->
 
              <!-- 现代写法，推荐(不支持 IE) -->
@@ -30,10 +30,10 @@
     .catch(console.error)
  </script>
     			<!--[//<button id="refresh" onclick="location.reload()">刷新</button>]-->
-                <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="888" height="150" src="./test"></iframe> 
+                <!--[//<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="888" height="150" src="./test"></iframe> 
 		<!--[//<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="//music.163.com/outchain/player?type=0&id=891340515&auto=1&height=90"></iframe>]-->
                 <!--[//<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=5234192&auto=1&height=32"></iframe>]-->
-				<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="0" height="0" src="//music.163.com/outchain/player?type=2&id=5234192&auto=1&height=32"></iframe>
+				<!--[//<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="0" height="0" src="//music.163.com/outchain/player?type=2&id=5234192&auto=1&height=32"></iframe>]-->
 		<button type="button"> <a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=chenyifan5498@163.com">联系我</a></button>
 	</main>
 </body>
@@ -73,15 +73,18 @@ document.onkeydown = function() {
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="0" height="370" src="about:blank"></iframe>
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="585" height="112" src="//s1.hdslb.com/bfs/seed/bplus-common/dynamic-assets/end.png"></iframe> <p>骚年，你到达了世界的尽头~</p>
 
+</script>
+
+
 <script type="text/javascript">
 
  try{
 
- if (/Android|webOS|iPhone|iPod|BlackBerry|MSIE|Trident/i.test(navigator.userAgent)) {
+ if (/MSIE|Trident/i.test(navigator.userAgent)) {
 
 
  
- window.location.href="404";
+ window.location.href="iestop";
  }else{
 
 
