--- a/stop.html
+++ b/stop.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>LEO的网站</title>
-	<link rel="stylesheet" href="https://cdn.retiehe.com/cached-d578d6460d6a084f0e57249cb514185d/leocode/Aeroboard.css">
+	<link rel="stylesheet" href="https://www.retiehe.com/css/template.css">
 </head>
 <body>
 	<div class="bg-img"></div>
@@ -34,7 +34,8 @@
 		<!--[//<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="//music.163.com/outchain/player?type=0&id=891340515&auto=1&height=90"></iframe>]-->
                 <!--[//<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=5234192&auto=1&height=32"></iframe>]-->
 				<!--[//<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="0" height="0" src="//music.163.com/outchain/player?type=2&id=5234192&auto=1&height=32"></iframe>]-->
-		<button type="button"> <a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=chenyifan5498@163.com">联系我</a></button>
+		<button type="button"> <a href="mailto:LEO_code_Studio@qq.com">联系我</a></button>
+		<p>邮箱:LEO_code_Studio@qq.com</p>
 	</main>
 </body>
 </html><!--[if lt IE 9]>
