--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
 <style>
-html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit-filter: grayscale(0%); }
+html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit-filter: grayscale(100%); }
 </style>
 </head>
 
@@ -82,13 +82,14 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
     <div class="container">
       <div class="splash">
         <div class="content">
-           <center><img src="1145141919810.png" tppabs="" alt="暂时无法显示，正在修复" id="qq" class="wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"></center>
+           <center><img src="1145141919810.png" tppabs="" alt="暂时无法显示，请刷新后再试" id="qq" class="wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"></center>
 
 
 
  <center><font size="5"><a href="https://space.bilibili.com/485405395" target="_blank">作者的BiliBili</a></font> </center>
 
  <center><font size="5">欢迎来到LEO的网站</font></center>
+		 <center><font size="5">江泽民同志永垂不朽</font></center>
  <center><font size="3">网站正在迁移，敬请期待！</font></center>
  <br>
 
