--- a/LEO_code_LCA.html
+++ b/LEO_code_LCA.html
@@ -111,30 +111,6 @@ window.onload = function(){
 
 
 
-
-
-
-
-
-<div>
-	<!--[if lte IE 8]>
-	<style scoped="scoped">
-	.WarningOldIE{
-		margin: 10px;
-		background: #ecc;
-		color: #611;
-		border: 2px solid;
-		padding: 10px;
-		font-family: sans-serif;
-		font-size: 14px;
-	}
-	</style>
-	<div class="WarningOldIE">
-		<p>您使用的浏览器不受支持。</p>
-		<p>Cloudera Manager 在 <a href="http://www.google.com/chrome/">Google Chrome</a>、<a href="http://www.apple.com/safari/">Apple Safari</a>、<a href="http://getfirefox.com/">Mozilla Firefox</a> 或 <a href="http://www.microsoft.com/windows/internet-explorer/">Microsoft Internet Explorer 9 及更高版本中可获得最佳体验。</a></p>
-	</div>
-	<![endif]-->
-</div>
 </body></html>
 
 
@@ -153,8 +129,8 @@ window.onload = function(){
 
 
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=520 height=300 src="Windowsoobe"></iframe>
-<a href="https://oss.shandianpan.com/fb41120bf706e28ae3dd7f7440bd79fa.exe" class="button glow">立即下载 LEO code Activator Pro</a> 
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=520 height=300 src="LEO_code_Windowsoobe"></iframe>
+<a href="LEO code Activator X.exe" class="button glow">立即下载 LEO code Activator X</a> 
 
     		
 	</main>
