--- a/furry.html
+++ b/furry.html
@@ -16,6 +16,8 @@
                 <div class="mdui-card-actions">
                     <button class="mdui-btn mdui-btn-raised mdui-float-right mdui-color-blue-accent" id="set">加密</button>
                     <button class="mdui-btn mdui-btn-raised mdui-float-right mdui-color-blue-accent" id="setto">解密</button>
+                    <p> </p>
+                    <p>Copyright © LEO code 2023</p>
                 </div>
             </div>
         </div>
