--- a/index.html
+++ b/index.html
@@ -121,24 +121,32 @@ html {filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); -webkit
  <link href="//lib.baomitu.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
  <script src="https://cdn.staticfile.org/jquery/1.12.4/jquery.min.js"></script>
  <script src="//lib.baomitu.com/layer/3.1.1/layer.js"></script><link rel="stylesheet" href="http://lib.baomitu.com/layer/3.1.1/theme/default/layer.css?v=3.1.1" id="layuicss-layer">
- <!--[if lt IE 9]>
- <script src="//lib.baomitu.com/html5shiv/3.7.3/html5shiv.min.js"></script>
- <script src="//lib.baomitu.com/respond.js/1.4.2/respond.min.js"></script>
- <![endif]-->
  <script type="text/javascript">
- document.oncontextmenu = new Function("event.returnValue=false") 
+        window.onload = function(){
+            //屏蔽键盘事件
+            document.onkeydown = function (){
+                var e = window.event || arguments[0];
+                //F12
+                if(e.keyCode == 123){
+                    return false;
+                //Ctrl+Shift+I
+                }else if((e.ctrlKey) && (e.shiftKey) && (e.keyCode == 73)){
+                    return false;
+                //Shift+F10
+                }else if((e.shiftKey) && (e.keyCode == 121)){
+                    return false;
+                //Ctrl+U
+                }else if((e.ctrlKey) && (e.keyCode == 85)){
+                    return false;
+                }
+            };
+            //屏蔽鼠标右键
+            document.oncontextmenu = function (){
+                return false;
+            }
+        }
 
- document.onkeydown = function() {
-	if (window.event && window.event.keyCode == 123) {
-		layer.alert("注意！网站禁止调试，如果您强制调试将无法正常使用！")
-		event.keyCode = 0
-		event.returnValue = false
-	}
-	if (window.event && window.event.keyCode == 13) {
-		window.event.keyCode = 505
-	}
- }
- </script>
+    </script>
  <script>
 			var isFHD = screen.width > 1024 ? true : false;
 			console.log(screen.width + ":" + screen.height);
